--- a/style.css
+++ b/style.css
@@ -1,487 +1,44 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }  
 header{ 
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    gap: 70px;
-    background-color: black;
-    height:2vh;
-    
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  gap: 70px;
+  background-color: black;
+  height:2vh;
+  width: 100%;
+  
 }
 header img{
-    width: 7vh;
-    height: 7vh;
+  width: 7vh;
+  height: 7vh;
 }
 ul{
-    display: flex;
-    gap: 50px;
-    
+  display: flex;
+  gap: 50px;
+  
 }
 body a{
-    text-decoration: none;
-    color: rgb(74, 99, 146);
-    font-size: 30px;
-    font-weight: 500;
+  text-decoration: none;
+  color: rgb(74, 99, 146);
+  font-size: 30px;
+  font-weight: 500;
 
 
 }
 body li{
-    list-style: none;
-
-    
+  list-style: none;    
 }
 
-/* body{
-    background-image: url(img/istockphoto-1156102065-612x612.jpg);
-    background-size: 100%;
-} */
-.main_page h1{
-    font-size: 50px;
-    color: rgb(113, 151, 221);
-
-}
-.main_page{
-    background-image: url(img/istockphoto-1156102065-612x612.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    display: flex;
-    align-items: center;
-
-
-
-    /* background-color: black; */
-
-    height: 100vh;
-}
-.img{
-    width: 14vh;
-    height: 14vh;
-}
-.imgContainer{
-    display: flex;
-    align-content: center;
-    gap: 70px;
-}
-.img1{
-    width: 16vh;
-    height: 12vh;
-}
-.divCenter{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 130vh;
-    gap: 50px;
-}
-footer{
-    background-color: black;
-    height: 200px;
-   
-    
-}
-footer ul{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    padding: 10px;
-    text-align: center;
-
-}
-footer a{
-    font-size: 20px;
-}
 .play_header_info{
-    display: flex;
-    /* flex-direction: column; */
-    gap: 20px;
-    height: 10vh;
-}
-.select{
-  width:150px;
-  height: 40px;
-  font-size: 18px;
-}
-#input{
-    width:200px;
-    height: 30px;
-    padding: 5px; 
-    font-size: 18px;
-}
-.label{
-    font-size: 20px;
-    font-weight: 300; 
-}
-.Formation{
-    display: flex;
-    gap: 20px;
-    align-items: center;
-}
-.play_main{
-    /* display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-template-rows: 1fr 1fr ;
-    height: 100vh; */
-    display: flex;
-    
-    
-} 
-.studium_socor{
-      /* grid-column: 2/3;
-    grid-row: 1/3; */
-    width: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    background-image: url(img/footble_pich.jpg);
-    /* background-repeat: no-repeat;
-    background-size:100%; */
-    height: 550px;
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    margin-top: 80px;
-
-}
-
-
-.studium{
-    /* grid-column: 2/3;
-    grid-row: 1/3; */
-    width: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    background-image: url(img/footble_pich.jpg);
-    /* background-repeat: no-repeat;
-    background-size:100%; */
-    height: 550px;
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    display: none;
-    margin-top: 80px;
-
-    
-  }
-  #img{
-    width: 6vh;
-    height: 7vh;
-    /* transform:
-    perspective(750px)
-    translate3d(0px, 0px, -250px)
-    rotateX(27deg)
-    scale(0.9, 0.9);
-  border-radius: 10px;
-  border: 5px solid #e6e6e6;
-  box-shadow: 0 70px 40px -20px rgba(0, 0, 0, 0.2);
-  transition: 0.4s ease-in-out transform;
-
-  &:hover {
-    transform: translate3d(0px, 0px, -250px);
-  } */
-  }
-  #img:hover{
-    width: 18vh;
-    height: 20vh;
-
-  }
-
-  .gk{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 6/8;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 1/2;
-    background-color: rgb(57, 32, 184);
-  }
-  
-  .lb{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 4/5;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 2/3;
-    background-color: rgb(202, 38, 29);
-  }
- 
-  .rb{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 9/10;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 2/3;
-    background-color: rgb(167, 135, 75);
-  }
-  
-  .cb1{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 5/7;
-    display: flex;
-    align-self: top;
-    
-    place-self: center;
-    grid-row: 2/4;
-    background-color: rgb(233, 239, 45);
-  }
-  
-  .cb2{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 7/9;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 2/4;
-    background-color: rgb(233, 239, 45);
-  }
-  
-  .cm1{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 4/6;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 5/6;
-    background-color: rgb(122, 204, 209);
-  }
-  .cm3{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 8/10;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 5/6;
-    background-color: rgb(122, 204, 209);
-  }
-  
-  .cm2{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column:6/8;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 5/7;
-    background-color: rgb(122, 204, 209);
-  }
-  
-  .lw{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 4/6;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 9/10;
-    background-color: rgb(91, 66, 19);
-  }
-  .rw{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 8/10;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 9/10;
-    background-color: rgb(66, 234, 102);
-  }
-  
-  .st{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column:6/8;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 9/11;
-    background-color: rgb(189, 64, 203);
-  }
-  
-  .studium2{
-    /* grid-column: 2/3;
-    grid-row: 1/3; */
-    width: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    background-image: url(img/footble_pich.jpg);
-    /* background-repeat: no-repeat;
-    background-size:100%; */
-    height: 550px;
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    display: none;
-    margin-top: 80px;
-
-    
-  }
-  .cmd1{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 5/7;
-    display: flex;
-    align-self: top;
-    
-    place-self: center;
-    grid-row: 4/6;
-    background-color: wheat;
-
-  }
-  .cmd2{
-    border-radius: 12%;
-    width: 30px;
-    height: 30px;
-    padding: 4px;
-    grid-column: 7/9;
-    display: flex;
-    align-self: center;
-    place-self: center;
-    grid-row: 4/6;
-    background-color: wheat;
-
-  }
-  .test{
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-  }
-  .test2,
-  .testgk{
-    display: flex;
-    gap: 20px;
-  }
-  .test3{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  .test3 input{
-    padding: 5px;
-    width: 40vh;
-    height: 25px; 
-  }
-  .remove_btn{
-    width: 20px;
-    height: 20px;
-  }
-  .players_body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
-}
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(100px, 1fr));
-    column-gap: 2px;
-    row-gap: 10px;
-    padding: 20px;
-    width: 90%;
-    max-width: 1200px;
-}
-.card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    /* transition: transform 0.3s ease; */
-    width: 20vh;
-    background-image: url(img/badge_gold.webp);
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-color: rgb(199, 176, 50);
-    
-}
-.card:hover {
-    transform: translateY(-10px);
-}
-.card img {
-    width: 60px;
-    height: 60px;
-    object-fit: cover;
-}
-.card .content {
-    padding: 15px;
-}
-.card h3 {
-    margin: 0;
-    font-size: 10px;
-    font-weight: bold;
-}
-.card p {
-    margin: 5px 0;
-    color: #555;
-    font-size: 10px;
-
-}
-.card .stats {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-}
-.card .stats span {
-    font-weight: bold;
-
-}
-  
-.content{
   display: flex;
-  flex-direction: column;
-}
-.content img{
-  width: 40px;
-  height: 20px;
-
-}
-.content span{
-  font-size: 10px;
-
+  /* flex-direction: column; */
+  gap: 20px;
+  height: 10vh;
 }
 .addPlayerCrad{
   display:flex;
@@ -495,6 +52,402 @@ footer a{
   height: 40px;
 }
 
+.select{
+width:150px;
+height: 30px;
+font-size: 18px;
+}
+#input{
+  width:100px;
+  height: 30px; 
+  padding: 5px; 
+  font-size: 18px;
+}
+.label{
+  font-size: 20px;
+  font-weight: 300; 
+}
+.Formation{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.playerContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
+  column-gap: 2px;
+  row-gap: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 1200px;
+  align-items: center;
+}
+.playerContainerST {
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
+  column-gap: 2px;
+  row-gap: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 1200px;
+  align-items: center;
+  display: none;
+}
+/* .card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  width: 20vh;
+  background-image: url(img/badge_gold.webp);
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-color: rgb(199, 176, 50);
+  
+}
+.card:hover {
+  transform: translateY(-10px);
+}
+.card img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+.card .content {
+  padding: 15px;
+}
+.card h3 {
+  margin: 0;
+  font-size: 10px;
+  font-weight: bold;
+}
+.card p {
+  margin: 5px 0;
+  color: #555;
+  font-size: 10px;
+
+}
+.card .stats {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.card .stats span {
+  font-weight: bold;
+
+}
+
+.content{
+display: flex;
+flex-direction: column;
+}
+.content img{
+width: 40px;
+height: 20px;
+
+}
+.content span{
+font-size: 10px;
+
+} */
+.card{
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: transform 0.3s ease;
+  width: 20vh;
+
+  height: 30vh;
+  background-image: url(img/badge_gold.webp);
+  background-repeat: no-repeat;
+  background-size:100%;
+  
+}
+.bigContainer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 158vh;
+  margin-top:40px;
+  margin-left:10px;
+  gap: 10px;
+  margin-bottom: 20px; 
+
+}
+/* .pitch img{
+  width: 90%;
+  margin-top: 20%;
+  margin-left: 10%;
+} */
+.pitch{
+  background-image: url(img/footble_pitch.jpg);
+  background-repeat: no-repeat;
+  width: 100vh;
+  background-size:100%;
+  height: 150vh;
+
+  
+  display: grid;
+  grid-column: 1/2;
+
+  grid-template-columns: repeat(10, 1fr); 
+  grid-template-rows: repeat(10, 1fr);   
+  /* height: 500px;
+  width: 300px; */
+  position: relative;
+  border: 2px solid black;
+
+
+}
+.pitch1{
+  background-image: url(img/footble_pitch.jpg);
+  background-repeat: no-repeat; 
+  background-size:100%;   
+  height: 150vh;
+  display: grid;
+  grid-column: 1/2;
+
+  grid-template-columns: repeat(10, 1fr); 
+  grid-template-rows: repeat(10, 1fr);   
+  /* height: 500px;
+  width: 300px; */
+  position: relative;
+  border: 2px solid black;
+  display: none;
+}
+.pitch2{
+  background-image: url(img/footble_pitch.jpg);
+  background-repeat: no-repeat;
+  background-size:100%;
+  height: 150vh;
+  display: grid;
+  grid-column: 1/2;
+
+  grid-template-columns: repeat(10, 1fr); 
+  grid-template-rows: repeat(10, 1fr);  
+  /* height: 500px;
+  width: 300px; */
+  position: relative;
+  border: 2px solid black;
+  display: none;
+
+
+}
+.pitchLeftSide{
+  grid-column: 2/3;
+
+}
+.cardContainer{ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.cardTop{
+  display: flex;
+  /* gap: 5px; */
+}
+.playerInfo h3{
+  font-size: 13px;
+  color: rgb(138, 112, 8);
+
+}
+.playerInfo h5{
+  font-size: 13px;
+  color: rgb(138, 112, 8);
+
+}
+
+.playerInfo{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+#flag{
+  width: 25px;
+  height: 15px;
+}
+#logo{
+  width: 22px;
+  height: 12px;
+
+}
+.playerPic{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cardButtom{
+  display: flex;
+  gap: 20px;
+
+}
+.playerSkils{
+  display: flex;
+  flex-direction: column;
+}
+
+.playerPic img{
+  width: 70px;
+  height: 65px;
+
+}
+.playerPic h1{
+  font-size: 10px;
+  width: 30px;
+  color: rgb(138, 112, 8);
+
+}
+
+
+.cardButtom h6{
+  color: rgb(138, 112, 8);
+}
+
+.gk,
+.lb,
+.rb,
+.cb1,
+.cb2,
+.cm1,
+.cm2,
+.cm3,
+.lw,
+.rw,
+.st,
+.lm,
+.rm,
+.cm_1,
+.cm_2,
+.st1,
+.st2{
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* transition: transform 0.3s ease; */
+  width: 20vh;
+  height: 30vh;
+  background-image: url(img/badge_gold.webp);
+  background-repeat: no-repeat;
+  background-size:100%;
+  text-align: center;
+  font-size: 18px;
+}
+
+.gk{
+  z-index: 5;
+  grid-column:5/7 ;
+  grid-row: 9/11;
+}
+.cb1{
+  z-index: 5;
+  grid-column:4/6 ;
+
+  grid-row: 7/9;
+}
+.cb2{
+  z-index: 5;
+  grid-row: 7/9;
+  grid-column:6/8 ;
+
+}
+.lb{
+  z-index: 5;
+  grid-column:2/4 ;
+
+  grid-row: 7/9;
+}
+.rb{
+  z-index: 5;
+  grid-column:8/11 ;
+
+  grid-row: 7/9;
+}
+.cm1{
+  z-index: 5;
+  grid-column:2/5 ;
+  grid-row: 5/7;
+}
+.cm2{
+  z-index: 5;
+  grid-column:5/7 ;
+  grid-row: 5/7;
+}
+.cm3{
+  z-index: 5;
+  grid-column:8/11 ;
+  grid-row: 5/7;
+}
+
+.lw{
+  z-index: 5;
+  grid-column:2/5 ;
+  grid-row: 2/4;
+}
+.st{
+  z-index: 5;
+  grid-column:5/7 ;
+  grid-row: 2/4;
+}
+
+.rw{
+  z-index: 5;
+  grid-column:8/11 ;
+  grid-row: 2/4;
+}
+.lm{
+  z-index: 5;
+  grid-column:2/4;
+  grid-row: 4/6;
+}
+.rm{
+  z-index: 5;
+  grid-column:8/11 ;
+  grid-row: 4/6;
+}
+.cm_1{
+  z-index: 5;
+  grid-column:4/6 ;
+  grid-row: 5/7;
+}
+.cm_2{
+  z-index: 5;
+  grid-column:6/8 ;
+  grid-row: 5/7;
+}
+
+.st1{
+  z-index: 5;
+  grid-column:4/6 ;
+  grid-row: 2/4;
+
+}
+.st2{
+  z-index: 5;
+  grid-column:6/8 ;
+  grid-row: 2/4;
+
+}
+.Substitutes{
+  background-color: aqua;
+  width: 700px;
+  height: 200px;
+}
+
+
+/* ***************add************* */
+/* .addPlayerbtn{
+  overflow-y: auto; 
+  max-height: 300px; 
+} */
+.AddPlayer{
+  display: flex;
+  flex-direction: column;
+  display: none;
+}
 .positionSelect{
   display: flex;
   padding: 40px;
@@ -529,46 +482,158 @@ footer a{
   padding: 5px;
 }
 
+/* **********************cb**********************/
+
+.CBplayerCountainer{
+  display: grid;
+  grid-template-columns: repeat(4, 150px);
+  column-gap: 2px;
+  row-gap: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 1200px;
+  align-items: center;
+  display: none;
+  
+}
+
+/* *****************responsive********** */
+
+
+@media (max-width: 812px){
+  body a{
+      font-size: 20px;
+  }
+  .select{
+      width:80px;
+      height: 20px;
+      font-size: 10px;
+    }
+    .addPlayerCrad{
+      display:flex;
+      align-items: center;
+      gap: 25px;
+    
+    }
+    .addPlayerCrad img{
+      width: 20px;
+      height: 20px;
+    }
+    .addPlayerCrad h3{
+     font-size: 10px;
+    }
+    .play_header_info{
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      height: 10vh;
+  }
+  .pitch{
+      width: 40vh;
+  }
+  .label{
+      font-size: 10px;
+      font-weight: 300; 
+  }
+
+  header{
+      width: 100vh;
+  }
+
+}
+/* @media (max-width:644px){
+
+  .pitch{
+      width: 20vh;
+  }
+}
+*/
+
+@media (max-width:1248px){
+  body a{
+      font-size: 20px;
+  }
+  .select{
+      width:100px;
+      height: 20px;
+      font-size: 12px;
+    }
+    .addPlayerCrad{
+      display:flex;
+      align-items: center;
+      gap: 25px;
+    
+    }
+    .addPlayerCrad img{
+      width: 30px;
+      height: 30px;
+    }
+    .addPlayerCrad h3{
+     font-size: 12px;
+    }
+    .play_header_info{
+      display: flex;
+      /* flex-direction: column; */
+      gap: 20px;
+      height: 10vh;
+  }
+  .pitch{
+      width: 70vh;
+  }
+  .label{
+      font-size: 12px;
+      font-weight: 300; 
+  }
+
+
  
-.gk{
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  width: 20vh;
-  height: 18vh;
+
 
 }
- 
-/* .lb{
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  width: 15vh;
-  height: 15vh;
 
-}
-.cb1{
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  width: 15vh;
-  height: 15vh;
-
-}
-.cb2{
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  width: 15vh;
-  height: 15vh;
-
+/* @media (max-width: 716px){
+  .pitch{
+      width: 60vh;
+  }
 } */
- .playerImgName{
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
- }
+/* @media (max-width: 497px){
+  .pitch{
+      width: 50vh;
+  }
+} */
+
+@media (max-width: 800px){ 
+  .play_header_info{
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      height: 10vh;
+  }
+  .pitch{
+      width: 30vh;
+      height: 48vh;
+      border: none;
+
+  }
+  .pitchLeftSide{
+      width: 60px;
+      grid-column: 2/3;
+      height: 48vh;
+
+  
+   }
+   body a{
+      font-size: 15px;
+  }
+  header img{
+      width: 6vh;
+      height: 6vh;
+  }
+  header{
+      width: 59vh;
+
+
+
+  }
+
+}
