--- a/style.css
+++ b/style.css
@@ -335,6 +335,7 @@ font-size: 10px;
   background-size:100%;
   text-align: center;
   font-size: 18px;
+  color: rgb(100, 112, 8);
 }
 
 .gk{
@@ -635,5 +636,16 @@ font-size: 10px;
 
 
   }
+
+}
+
+#add_btn,
+#add-gk-btn{
+  width: 20vh;
+  height: 5vh;
+  background-color: rgb(74, 99, 146);
+  color: white;
+  font-size: 18px;
+  border: none;
 
 }
